# plumbline

./: .gitignore  LICENSE  README.md  a_clean.html  b_orientation_only.html  c_garble_only.html  d_seam_only.html  e_all_modes_combined.html  f_noise_not_ink.html  index.html  pyproject.toml
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-05-31-plumbline.md  2026-06-01-plumbline-dashboard.md  2026-06-01-plumbline-text-row-core.md  2026-06-03-plumbline-coherence-view-tiling-spacing.md  2026-06-04-plumbline-zarr-input.md
docs/superpowers/specs/: 2026-05-31-plumbline-design.md  2026-06-01-plumbline-dashboard-design.md  2026-06-01-plumbline-text-row-core-design.md  2026-06-03-plumbline-coherence-view-tiling-spacing-design.md
examples/: fetch_frag1.sh  make_demo_combined.py  make_synthetic_example.py  scroll5_prediction_result.json  synthetic_report.json
plumbline/: cli.py  coherence.py  dashboard.py  discover.py  io.py  model.py  render.py  report.py  score.py  synthetic.py  tiles.py  util.py
plumbline/templates/: index.html.j2  report.html.j2
tests/: test_batch.py  test_cli.py  test_coherence.py  test_dashboard.py  test_discover.py  test_io.py  test_real_ir.py  test_render.py  test_report.py  test_score.py  test_smoke.py  test_synthetic.py  test_tiles.py  test_zarr_io.py
